# CNOFastComputingProject

./: README.md  pyproject.toml  setup.sh
analysis/: Readme  check_overlap_ac_obs.py  compare_convLSTM_FNO3d.py  info_simulations  pyvista_plotter.py  visualize_data.py
bash_scripts/: run_script.sh
examples/: example.py  example_FNO.py
simulations/40/: simulation.py  solution_0000.vtk  solution_0010.vtk  solution_0020.vtk  solution_0030.vtk  solution_0040.vtk  solution_0050.vtk  solution_0060.vtk  solution_0070.vtk  solution_0080.vtk  solution_0090.vtk  solution_0100.vtk  solution_0110.vtk  solution_0120.vtk  solution_0130.vtk  solution_0140.vtk  solution_0150.vtk  solution_0160.vtk  solution_0170.vtk  solution_0180.vtk  solution_0190.vtk  solution_0200.vtk  solution_0210.vtk  solution_0220.vtk  solution_0230.vtk  solution_0240.vtk  solution_0250.vtk  solution_0260.vtk  solution_0270.vtk  solution_0280.vtk  solution_0290.vtk  solution_0300.vtk  solution_0310.vtk  solution_0320.vtk  solution_0330.vtk  solution_0340.vtk  solution_0350.vtk  solution_0360.vtk  solution_0370.vtk  solution_0380.vtk  (+162 more)
src/: CNOBenchmarks_3D.py  CNOBenchmarks_3D_VTK.py  batch_generate_vtk_with_plots.py  compare_convLSTM_FNO3d.py  convLSTM.py  data_augmentation.py  generate_vtk_from_config.py  test.py
